<resources>
    <string name="app_name">Win2Gether</string>

    <!--Category Activity-->
    <string name="category_activity_empty_state_desc">No game categories found!\nClick the + to add a new game category.</string>

    <!--Category Config Activity-->
    <string name="category_config_activity_title">Game Category</string>
    <string name="category_config_activity_add_game">Add game configuration</string>
    <string name="category_config_activity_edit_game">Edit Game configuration</string>

    <!--Game Activity-->
    <string name="game_activity_empty_state_desc">No games found!\nClick the + to add a new game.</string>
    <string name="game_activity_invalid_num_players_msg">Must enter a number greater than 0</string>

    <!--Game Config Activity-->
    <string name="game_config_activity_add_game">Add game</string>
    <string name="game_config_activity_edit_game">Edit game</string>
    <string name="game_config_game_name">Game Name:</string>
    <string name="game_config_bad_score">Bad Score:</string>
    <string name="game_config_good_score">Good Score:</string>
    <string name="game_config_sum_of_scores">Sum of scores:</string>
    <string name="game_config_num_players"># of players:</string>
    <string name="game_config_empty_state_desc">No players found!\n Click the + to add a new player.</string>

    <!--Achievement activity-->
    <string name="achievement_activity_title">Achievements</string>

    <!--Help Screen-->
    <string name="help_activity_title">Help Centre</string>
    <string name="help_message"><b>Welcome to the Help Centre!</b>\nWin2Gether is designed to generate the co-operative achievement ranks of game categories you\'ve saved, as well as track the history and results of your played games.\n\n<b>Game Category:</b>\nDisplays the different game categories you\'ve entered into the system. Click the + to add a new game category. Click the camera button in the top right to take a photo.\n\n<b>Game Manager:</b>\nDisplays the game history of one game category and the results of each game. Click on the + to add a new game. Click on an individual played game to edit/delete the game. Click on the pencil icon to edit the game configuration. Click on ACHIEVEMENTS and enter valid number of players to view possible achievements. Click the camera button in the top right to take a photo.\n\n<b>Achievements:</b>\nDisplays the different possible achievements of one game category based on the number of players you\'ve entered. Images from: <a href="https://openmoji.org/">openmoji.org</a>, <a href="https://www.sfu.ca/computing/people/faculty/brianfraser.html">sfu.ca</a> and <a href="https://pngtree.com/">pngtree.com</a>. Sound from: <a href="https://mixkit.co/free-sound-effects/applause/">mixkit.co</a>.\n\n<b>Authors for group NEON:</b> \nAmanda: Has a single letter for her middle name. \nMekdim: sleep = name.length \nMantaj: Likes physics¿\nOlive: SMALL DESCRIPTION (intentional)</string>

    <!--Other-->
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="num_of_players">Number of Players?</string>
    <string name="help_centre">@string/help_activity_title</string>
    <string name="edit_category">Edit Category</string>
    <string name="invalid_num_players_msg">Invalid number of players</string>
    <string name="achievement_display">Achievement:</string>
    <string name="IconFileName">_level_</string>
    <string name="defType">drawable</string>
    <string name="achievements_settings">Achievements Settings</string>
    <string name="theme_selection">theme_selection</string>
    <string name="theme_selection_title">Select Achievement Theme</string>
    <string name="select_theme_prompt">Choose between the following themes for your achievements:</string>
    <string name="theme_1">Food Theme</string>
    <string name="theme_2">Space Theme</string>
    <string name="theme_3">Colours Theme</string>
    <string name="player_score_prompt">Player Score:</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="edit_player_score_prompt">Edit Player Score:</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="clear">clear</string>

    <string name="number_of_players">Number of Players: </string>
    <string name="achievement_dialog">Achievement Dialog</string>
    <string name="delete_cap">DELETE</string>
    <string name="great_job">Great job!</string>
    <string name="your_rank_is">Your rank is: </string>
    <string name="achievements">achievements</string>
    <string name="achievement_description">Achievement Description</string>
    <string name="zero">0</string>
    <string name="no_players_err_msg">A game must have at least one player</string>
    <string name="score_valid_int_err_msg">Score must be a valid integer</string>
    <string name="num_of_points_till_next_achievement"># of points till next rank:</string>
    <string name="play_animation">Play Animation</string>
    <string name="next_achievement">Next Achievement:</string>
    <string name="achievement_celebration">Achievement Celebration</string>
    <string name="highest_achievement_msg">None!</string>
    <string name="take_photo">take a photo</string>
    <string name="take_game_photo_title">Take a Picture of your Game</string>
    <string name="photo_data">data</string>
    <string name="permission_not_allowed_prompt">Allow Permission to use Camera</string>
    <string name="photo_file_not_found">FILE NOT FOUND, TAKE NEW PHOTO</string>
</resources>