<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ThemeSelectActivity">

    <TextView
        android:id="@+id/tvSelectTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="24dp"
        android:text="@string/select_theme_prompt"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/rgThemeSelection"
        app:layout_constraintEnd_toEndOf="@id/rgThemeSelection"
        app:layout_constraintStart_toStartOf="@id/rgThemeSelection"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgThemeSelection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectTheme">

        <RadioButton
            android:id="@+id/radioTheme1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/theme_1"
            android:textAlignment="center"
            android:textColor="@drawable/radio_text_colour"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioTheme2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/theme_2"
            android:textAlignment="center"
            android:textColor="@drawable/radio_text_colour"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioTheme3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/theme_3"
            android:textAlignment="center"
            android:textColor="@drawable/radio_text_colour"
            android:textSize="20sp" />


    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>