<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CelebrationActivity">

    <TextView
        android:id="@+id/tvCeleAchievement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achievement_display"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNextAchievement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:id="@+id/tvCeleAchieveGenerator"
        android:layout_width="219dp"
        android:layout_height="37dp"
        android:textAlignment="center"
        android:textColor="@color/bright_pink"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvNextAchievementGen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvCeleAchievement"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

    <TextView
        android:id="@+id/tvNextAchievement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_achievement"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvPointsTillNextRank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />

    <TextView
        android:id="@+id/tvNextAchievementGen"
        android:layout_width="219dp"
        android:layout_height="37dp"
        android:textAlignment="center"
        android:textColor="@color/bright_pink"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvPointsTillNextRank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/tvNextAchievement"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/tvPointsTillNextRankGen"
        android:layout_width="219dp"
        android:layout_height="37dp"
        android:textAlignment="center"
        android:textColor="@color/bright_pink"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/celebrationAchievementIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPointsTillNextRank"
        app:layout_constraintVertical_bias="0.441" />

    <TextView
        android:id="@+id/tvPointsTillNextRank"
        android:layout_width="253dp"
        android:layout_height="28dp"
        android:layout_marginTop="68dp"
        android:text="@string/num_of_points_till_next_achievement"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/celebrationAchievementIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373" />

    <ImageView
        android:id="@+id/celebrationAchievementIcon"
        android:layout_width="343dp"
        android:layout_height="316dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlayAnimation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/one_level_1" />

    <Button
        android:id="@+id/btnPlayAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn"
        android:text="@string/play_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971" />
</androidx.constraintlayout.widget.ConstraintLayout>